--- a/packages/cli-utils/package.json
+++ b/packages/cli-utils/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mocky-balboa/next-js",
-  "version": "1.1.0",
-  "description": "Next.js integration for Mocky Balboa. Mock your server-side network requests in your test suites.",
+  "name": "@mocky-balboa/cli-utils",
+  "version": "0.0.0",
+  "description": "Mocky Balboa CLI utilities for server integrations with CLI's.",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
   "bugs": {
@@ -10,48 +10,27 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mocky-balboa/mocky-balboa.git",
-    "directory": "packages/next-js"
+    "directory": "packages/cli-utils"
   },
-  "keywords": [
-    "next-js",
-    "next.js",
-    "nextjs",
-    "next",
-    "mocking",
-    "network",
-    "testing",
-    "tests",
-    "integration",
-    "server"
-  ],
+  "keywords": [],
   "author": {
     "name": "Lewis Nelson",
     "url": "https://lewnelson.com"
   },
   "license": "MIT",
   "packageManager": "pnpm@10.14.0",
-  "main": "./dist/cjs/next-js.cjs",
-  "types": "./dist/types/next-js.d.ts",
-  "bin": {
-    "mocky-balboa-next-js": "./dist/esm/cli.js"
-  },
+  "main": "./dist/cjs/cli-utils.cjs",
+  "types": "./dist/types/cli-utils.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/esm/next-js.js",
-      "require": "./dist/cjs/next-js.cjs",
-      "types": "./dist/types/next-js.d.ts"
-    },
-    "./cache-handler": {
-      "import": "./dist/esm/cache-handler.js",
-      "require": "./dist/cjs/cache-handler.cjs",
-      "types": "./dist/types/cache-handler.d.ts"
+      "import": "./dist/esm/cli-utils.js",
+      "require": "./dist/cjs/cli-utils.cjs",
+      "types": "./dist/types/cli-utils.d.ts"
     }
   },
   "scripts": {
     "build:esm": "swc src --out-dir dist/esm -C module.type=es6 --strip-leading-paths",
     "build:cjs": "swc src --out-dir dist/cjs -C module.type=commonjs --strip-leading-paths --out-file-extension cjs",
-    "build:esm:types": "tsc --emitDeclarationOnly --project tsconfig.build.esm.json",
-    "build:cjs:types": "tsc --emitDeclarationOnly --project tsconfig.build.cjs.json",
     "build": "pnpm clean && pnpm run build:esm && pnpm run build:cjs && pnpm run build:types && pnpm run post:build",
     "build:types": "tsc --emitDeclarationOnly --project tsconfig.types.json",
     "build:watch": "concurrently \"pnpm run build:esm --watch\" \"pnpm run build:cjs --watch\" \"pnpm run build:types --watch\" \"pnpm run post:build:watch\"",
@@ -62,13 +41,12 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
-    "@mocky-balboa/cli-utils": "workspace:*",
+    "@mocky-balboa/logger": "workspace:*",
     "@mocky-balboa/server": "workspace:*",
+    "@mocky-balboa/shared-config": "workspace:*",
+    "@types/express": "catalog:",
     "commander": "^14.0.0",
-    "jiti": "^2.5.1"
-  },
-  "peerDependencies": {
-    "next": ">=14.0.0"
+    "express": "catalog:"
   },
   "devDependencies": {
     "@swc/cli": "catalog:",
@@ -76,7 +54,6 @@
     "chokidar-cli": "catalog:",
     "@types/node": "catalog:",
     "concurrently": "catalog:",
-    "next": "^15.5.0",
     "rimraf": "catalog:",
     "typescript": "catalog:"
   }
