--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mocky-balboa/mocky-balboa.git",
-    "directory": "packages/client"
+    "directory": "packages/server"
   },
   "keywords": [
     "mocking",
