--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mocky-balboa/mocky-balboa.git",
-    "directory": "packages/client"
+    "directory": "packages/vite"
   },
   "keywords": [
     "vite-plugin",
@@ -52,6 +52,7 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "@mocky-balboa/logger": "workspace:*",
     "@mocky-balboa/server": "workspace:*"
   },
   "peerDependencies": {
