fix: http on generic clis

--- a/packages/next-js/package.json
+++ b/packages/next-js/package.json
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "@mocky-balboa/cli-utils": "workspace:*",
+    "@mocky-balboa/logger": "workspace:*",
     "@mocky-balboa/server": "workspace:*",
     "commander": "^14.0.0",
     "jiti": "^2.5.1"
