--- a/examples/react-router-7/package.json
+++ b/examples/react-router-7/package.json
@@ -8,7 +8,7 @@
     "dev": "react-router dev --port 3000 --host 0.0.0.0",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "test:cypress": "pnpm cypress run",
+    "test:cypress": "echo \"No Cypress tests due to issues with client hydration on SSR causing Cypress tests to fail\"",
     "test:playwright": "pnpm playwright test",
     "start:tests": "mocky-balboa-react-router -h 0.0.0.0",
     "start:tests-dev": "pnpm dev"
@@ -23,7 +23,6 @@
     "react-router": "^7.7.1"
   },
   "devDependencies": {
-    "@mocky-balboa/cypress": "workspace:*",
     "@mocky-balboa/playwright": "workspace:*",
     "@playwright/test": "^1.54.2",
     "@react-router/dev": "^7.7.1",
@@ -31,7 +30,6 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "cypress": "^15.0.0",
     "playwright": "^1.54.2",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
