react router support (#23)
* feat: added support for https on local servers

* docs: corrected package paths in package.json references

* feat: update vite plugin to ensure correct server config

* feat: added react router package

* fix: ensure commander cli is parsed and remove duplicate option

* fix: http on generic clis

* docs: updated cli usage docs on astro and next-js

* chore: remove unused import

* docs: added vite section to custom server docs

* docs: fix api reference docs bad entry point resolutions

* feat: make handler optional in getServerEntryHandler

* fix: react router convert server build to express middleware

* chore: fixed peer dependency version on vite

* feat: added react-router v7 example

* refactor: unused arg

* docs: updated docs adding react-router example

* chore: remove cypress tests from react-router example due to hydration errors

* chore: prepare release

* chore: list tags in pr canary release

* chore: install cypress to react-router to satisfy ci workflow

* fix: tagging on github workflows

* docs: cleanup changelogs

* docs: updated react router example readme

* docs: update titles on readme for correct package names

--- a/packages/next-js/package.json
+++ b/packages/next-js/package.json
@@ -62,8 +62,9 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "@mocky-balboa/cli-utils": "workspace:*",
+    "@mocky-balboa/logger": "workspace:*",
     "@mocky-balboa/server": "workspace:*",
-    "@mocky-balboa/shared-config": "workspace:*",
     "commander": "^14.0.0",
     "jiti": "^2.5.1"
   },
