chore: rename example package names

--- a/examples/react-router-7/package.json
+++ b/examples/react-router-7/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-7",
+  "name": "@mocky-balboa/example-react-router-7",
   "private": true,
   "type": "module",
   "scripts": {
