--- a/examples/sveltekit-2/package.json
+++ b/examples/sveltekit-2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sveltekit-2",
+  "name": "@mocky-balboa/example-sveltekit-2",
   "private": true,
   "version": "0.0.1",
   "type": "module",
