--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "@changesets/cli": "^2.29.6",
+    "@changesets/types": "^6.1.0",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@mocky-balboa/changeset-changelog": "file:./scripts/changeset-changelog",
     "@types/recursive-readdir": "^2.2.4",
     "husky": "^9.1.7",
     "octokit": "^5.0.3",
