--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -34,6 +34,11 @@
       "import": "./dist/esm/cypress.js",
       "require": "./dist/cjs/cypress.cjs",
       "types": "./dist/types/cypress.d.ts"
+    },
+    "./commands": {
+      "import": "./dist/esm/commands.js",
+      "require": "./dist/cjs/commands.cjs",
+      "types": "./dist/types/commands.d.ts"
     }
   },
   "scripts": {
