--- a/examples/sveltekit-2/package.json
+++ b/examples/sveltekit-2/package.json
@@ -11,7 +11,7 @@
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test:cypress": "echo \"No Cypress tests\"",
+    "test:cypress": "pnpm cypress run",
     "test:playwright": "pnpm playwright test",
     "start:tests": "mocky-balboa-sveltekit -h 0.0.0.0",
     "start:tests-dev": "pnpm dev --port 3000"
