--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mocky-balboa/cypress",
   "version": "1.0.8",
-  "description": "Cypress integration for Mocky Balboa. Mock your server-side network requests directly inside your Cypress tests.",
+  "description": "Cypress integration for Mocky Balboa. Mock your full-stack network requests directly inside your Cypress tests.",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
   "bugs": {
