--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mocky-balboa/playwright",
   "version": "1.0.8",
-  "description": "Playwright integration for Mocky Balboa. Mock your server-side network requests directly inside your Playwright tests.",
+  "description": "Playwright integration for Mocky Balboa. Mock your full-stack network requests directly inside your Playwright tests.",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
   "bugs": {
