--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -65,9 +65,49 @@ jobs:
           PR_NUMBER: ${{ github.event.number }}
         run: node scripts/update-canary-release-pr-body.cjs
 
+  build_and_deploy_docs:
+    name: 📖 Build and deploy docs
+    needs:
+      - build_and_test
+      - canary_release
+    permissions:
+      contents: read
+      deployments: write
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          fetch-depth: 0
+
+      - name: Setup monorepo
+        uses: ./.github/actions/setup-monorepo
+
+      - name: Build packages
+        run: pnpm build:packages
+
+      - name: Build docs
+        run: pnpm --filter "@mocky-balboa/docs-mockybalboa-com" --filter "@mocky-balboa/docs-api-reference.mockybalboa.com" run build
+
+      - name: Deploy docs.mockybalboa.com
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy ./sites/docs.mockybalboa.com/build --project-name=mocky-balboa
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy api-reference.mockybalboa.com
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy ./sites/api-reference.mockybalboa.com/docs --project-name=mocky-balboa-api-reference
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
   pr_checks_passed:
     name: ✅ PR checks passed
-    needs: canary_release
+    needs: build_and_deploy_docs
     runs-on: ubuntu-latest
     permissions: {}
     steps:
