--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,7 @@ jobs:
 
   build_and_deploy_docs:
     name: 📖 Build and deploy docs
+    runs-on: ubuntu-latest
     needs:
       - build_and_test
       - release
