--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -67,6 +67,7 @@ jobs:
 
   build_and_deploy_docs:
     name: 📖 Build and deploy docs
+    runs-on: ubuntu-latest
     needs:
       - build_and_test
       - canary_release
