--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -68,11 +68,8 @@ jobs:
   build_and_deploy_docs:
     name: 📖 Build and deploy docs
     runs-on: ubuntu-latest
-    needs:
-      - build_and_test
-      - canary_release
     permissions:
-      contents: read
+      contents: write
       deployments: write
     steps:
       - name: Checkout Repository
@@ -96,7 +93,6 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy ./sites/docs.mockybalboa.com/build --project-name=mocky-balboa
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Deploy api-reference.mockybalboa.com
         uses: cloudflare/wrangler-action@v3
@@ -104,11 +100,18 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy ./sites/api-reference.mockybalboa.com/docs --project-name=mocky-balboa-api-reference
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Comment docs deployment preview
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.number }}
+        run: node scripts/comment-docs-preview-urls.cjs
 
   pr_checks_passed:
     name: ✅ PR checks passed
-    needs: build_and_deploy_docs
+    needs:
+      - canary_release
+      - build_and_deploy_docs
     runs-on: ubuntu-latest
     permissions: {}
     steps:
