--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -66,7 +66,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.COMMENTS_GH_TOKEN }}
           PR_NUMBER: ${{ github.event.number }}
-        run: node scripts/comment-canary-release.cjs
+        run: node scripts/comment-canary-release.cjs $(git rev-parse HEAD)
 
   build_and_deploy_docs:
     name: 📖 Build and deploy docs
