--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mocky-balboa/client",
-  "version": "2.0.0",
+  "version": "2.0.1-canary.b519826",
   "description": "Client library for Mocky Balboa to interact with the WebSocket server for real-time network mocking in your test suites.",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
