--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mocky-balboa/cypress",
-  "version": "2.0.0",
+  "version": "2.0.1-canary.b519826",
   "description": "Cypress integration for Mocky Balboa. Mock your full-stack network requests directly inside your Cypress tests.",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
