--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mocky-balboa/react-router",
-  "version": "1.1.3",
+  "version": "1.1.4-canary.b519826",
   "description": "Mocky Balboa integration for React Router.",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
