Revert "fix: update changelogs on pr canary releases"
This reverts commit 1c9b20d1c9b564642f0ffe6c3cec02148cf542a6.

--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mocky-balboa/logger",
-  "version": "1.0.8-canary.b519826",
+  "version": "1.0.7",
   "description": "Logger library for Mocky Balboa",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
