--- a/packages/next-js/package.json
+++ b/packages/next-js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mocky-balboa/next-js",
-  "version": "1.2.6-canary.b519826",
+  "version": "1.2.5",
   "description": "Next.js integration for Mocky Balboa. Mock your full-stack network requests in your test suites.",
   "type": "module",
   "homepage": "https://docs.mockybalboa.com",
