feat(server): added proxy server for handling sse requests

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -59,6 +59,8 @@
     "@mocky-balboa/logger": "workspace:*",
     "@mocky-balboa/shared-config": "workspace:*",
     "@mocky-balboa/websocket-messages": "workspace:*",
+    "cors": "^2.8.5",
+    "express": "catalog:",
     "mime-types": "^3.0.1",
     "msw": "^2.11.1",
     "uuid": "catalog:",
@@ -68,13 +70,13 @@
     "@swc/cli": "catalog:",
     "@swc/core": "catalog:",
     "chokidar-cli": "catalog:",
+    "@types/cors": "^2.8.17",
     "@types/express": "catalog:",
     "@types/koa": "catalog:",
     "@types/mime-types": "^3.0.1",
     "@types/node": "catalog:",
     "@types/ws": "catalog:",
     "concurrently": "catalog:",
-    "express": "catalog:",
     "fastify": "catalog:",
     "@fastify/express": "catalog:",
     "koa": "catalog:",
