--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -56,6 +56,7 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "@mocky-balboa/browser": "workspace:*",
     "@mocky-balboa/client": "workspace:*",
     "@mocky-balboa/logger": "workspace:*"
   },
