--- a/packages/cypress/tsconfig.json
+++ b/packages/cypress/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ES2021",
     "esModuleInterop": true,
     "lib": ["ES2021"],
-    "types": ["node"],
+    "types": [],
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
