--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -28,13 +28,18 @@
 		"./fetch-stub": {
 			"import": "./dist/fetch-stub.js",
 			"require": "./dist/fetch-stub.js"
+		},
+		"./websocket-stub": {
+			"import": "./dist/websocket-stub.js",
+			"require": "./dist/websocket-stub.js"
 		}
 	},
 	"scripts": {
 		"build:event-source-stub": "esbuild src/event-source-stub.ts --bundle --minify --outfile=dist/event-source-stub.js --log-level=error",
 		"build:fetch-stub": "esbuild src/fetch-stub.ts --bundle --minify --outfile=dist/fetch-stub.js --log-level=error",
-		"build": "pnpm clean && pnpm run build:event-source-stub && pnpm run build:fetch-stub",
-		"build:watch": "concurrently \"pnpm run build:event-source-stub --watch\" \"pnpm run build:fetch-stub --watch\"",
+		"build:websocket-stub": "esbuild src/websocket-stub.ts --bundle --minify --outfile=dist/websocket-stub.js --log-level=error",
+		"build": "pnpm clean && pnpm run build:event-source-stub && pnpm run build:fetch-stub && pnpm run build:websocket-stub",
+		"build:watch": "concurrently \"pnpm run build:event-source-stub --watch\" \"pnpm run build:fetch-stub --watch\" \"pnpm run build:websocket-stub --watch\"",
 		"clean": "rimraf dist",
 		"release": "semantic-release",
 		"test": "echo \"No tests\""
