fix(graphql): codegen plugin supports different naming configs

--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -15,7 +15,11 @@
 		"isolatedModules": true,
 		"noUncheckedSideEffectImports": true,
 		"moduleDetection": "force",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"baseUrl": ".",
+		"paths": {
+			"@mocky-balboa/graphql": ["./src/graphql.ts"]
+		}
 	},
-	"exclude": ["dist", "src/test/generated"]
+	"exclude": ["dist"]
 }
