--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,6 +13,7 @@ catalog:
   '@types/ws': ^8.18.1
   chokidar-cli: ^3.0.0
   concurrently: ^9.2.1
+  esbuild: 0.25.10
   express: 5.1.0
   fastify: ^5.5.0
   get-port: ^7.1.0
