--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,10 @@ packages:
 
 catalog:
   '@fastify/express': ^4.0.2
+  '@graphql-codegen/cli': ^6.0.0
+  '@graphql-codegen/typed-document-node': ^6.0.0
+  '@graphql-codegen/typescript': ^5.0.0
+  '@graphql-codegen/typescript-operations': ^5.0.0
   '@swc/cli': ^0.7.8
   '@swc/core': ^1.13.4
   '@types/express': 5.0.3
